<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.mah.af2015.p4.MovementActivity">

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:id="@+id/sign_in"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textAllCaps="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/sign_in"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/username"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"
        android:layout_margin="15dp"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/username"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:textAllCaps="false" />

    <Button
        android:text="@string/authorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:id="@+id/authorize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

</RelativeLayout>
